	PR gold/12392 	* i386.cc (Target_i386::do_finalize_sections): Define __rel_iplt 	symbols if necessary. 	* x86_64.cc (Target_x86_64::do_finalize_sections): Likewise.